<resources>
    <string name="app_name">ProductsAdder</string>
    <string name="category_hint">Category</string>
    <string name="register_to_account">Register to your\naccount</string>
    <string name="sign_up_to_your_account">Sign up to your Account</string>
    <string name="login_to_your_account">Login to your\naccount</string>
    <string name="sign_in_to_your_account">Sign in to your Account</string>
    <string name="we_will_send_your_password_link_to_your_email">We will send your password link to your email</string>
    <string name="dont_have_account_register">Don’t have an account ? Register</string>
    <string name="bestPlace">The Best Place For \n New Gear</string>
    <string name="quality">Get quality products online from \n our store</string>
    <string name="register">Register</string>
    <string name="start">Start</string>
    <string name="login">Login</string>
    <string name="loginHeader">"Log In "</string>
    <string name="loginRegText">If you do not have an account. \n Please register</string>
    <string name="registerHeader">Register</string>
    <string name="registerLoginText">If you have an account. Please Log in.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="my_account">My Account</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="add_product">Add Product</string>
    <string name="product_general_information">Product general information :</string>
    <string name="name">Name</string>
    <string name="product_description">Product Description</string>
    <string name="price">Price</string>
    <string name="offer_percentage">Offer Percentage</string>
    <string name="product_details">Product details :</string>
    <string name="size">Size</string>
    <string name="colors">COLORS</string>
    <string name="images">IMAGES</string>
    <string name="save">Save</string>
    <string name="edit_product">Edit Product</string>
    <string name="moneymakers">moneymakers</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="product">Product</string>
    <string name="text">text</string>
    <string name="order">Order</string>
    <string name="order_list">Order List</string>
    <string name="order_detail">Order Detail</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_product">Delete Product</string>
    <string name="are_you_sure_you_want_to_delete_this_category">Are you sure you want to delete this category?</string>
    <string name="are_you_sure_you_want_to_delete_this_product">Are you sure you want to delete this product?</string>
    <string name="order_not_found">Order not found...</string>

</resources>