<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/registerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_frame"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_16sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBestPlaceForGear"
            style="@style/h4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="start"
            android:includeFontPadding="false"
            android:text="@string/register_to_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/sign_up_to_your_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/registerLinearLayout">

        <RelativeLayout
            android:id="@+id/mainRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/registerRelativelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:padding="@dimen/_3sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutFirstname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/first_name"
                    android:padding="@dimen/_2sdp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/g_gray500"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerFirstnameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutLastname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textInputLayoutFirstname"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/last_name"
                    android:padding="@dimen/_2sdp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/g_gray500"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerLastnameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textInputLayoutLastname"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/email"
                    android:padding="@dimen/_2sdp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/g_gray500"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerEmailEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_below="@+id/textInputLayoutEmail"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:hint="@string/password"
                    android:padding="@dimen/_1sdp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/g_gray500"
                    app:shapeAppearance="@style/Rounded">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerPasswordEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerRegisterBtn"
                style="@style/blueButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/register"
                android:textSize="@dimen/_12ssp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/registerRelativelayout"
                android:layout_marginTop="@dimen/_12sdp"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registerRegisterBtn"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/poppins_thin"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/g_gray900"
                android:textSize="@dimen/_9ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/registerHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:fontFamily="@font/poppins_thin"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/g_blue"
                android:textSize="@dimen/_9ssp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>